fix broken style

--- a/_sass/custom.scss
+++ b/_sass/custom.scss
@@ -11,9 +11,9 @@ img {
 }
 
 .header-link {
-  position: absolute;
-  left: -0.5em;
-  opacity: 0;
+  // position: absolute;
+  // left: -0.5em;
+  opacity: 0.3;
   transition: opacity 0.2s ease-in-out 0.1s;
 }
 
